- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5460] Clean up the use of FlashMessageService
- [#5417] Require static_info_tables >= 6.2.0
- [#5408] Drop version-specific code and class_exists
- [#5407] Drop the old XCLASS footers

Changes:
- [#5426] Change t3lib_beUserAuth to BackendUserAuthentication
- [#5439] Change t3lib_SCbase to \TYPO3\CMS\Backend\Module\BaseScriptClass
- [#5459] Change t3lib_FlashMessageQueue to \TYPO3\CMS\Core\Messaging\FlashMessageQueue
- [#5430] Change t3lib_extMgm to \TYPO3\CMS\Core\Utility\ExtensionManagementUtility
- [#5458] Change t3lib_iconworks to \TYPO3\CMS\Backend\Utility\IconUtility
- [#5457] Change t3lib_FlashMessage to \TYPO3\CMS\Core\Messaging\FlashMessage
- [#5456] Change t3lib_exception to \UnexpectedValueException
- [#5455] Change t3lib_BEfunc to TYPO3\CMS\Backend\Utility\BackendUtility
- [#5425] Change t3lib_div to \TYPO3\CMS\Core\Utility\GeneralUtility
- [#5418] Drop the css_styled_content requirement
- [#5406] Require TYPO3 6.2 and PHP 5.5
- [#5401] Mark the extension as stable
- [#5399] Document the new FORMidable in the upgrade notes


0.10.0 (released 2015-08-22)

Features:
- [#5379] Make the Excel-specific CSV line configurable
- [#5365] Full-text search for target_groups
- [#5353] Clone feature for events in the FE editor
- [#5287] Add additional notification e-mails for new FE-entered events
- [#5339] Format times with "hour"
- [#5319] The from-to search should also find events ending during that period
- [#5286] Add a category filter to the search widget
- [#5261] Add a full-text search index
- [#5274] Make it configurable whether to link to the single view
- [#5273] Add a configuration for disabling the sorting links in the list view
- [#5233] Add a different error message if the event UID is missing in the URL
- [#5098] Switch seminars to SwiftMailer