@@ -16,6 +16,7 @@ Cleanup:
 - [#5407] Drop the old XCLASS footers
 
 Changes:
+- [#5427] Change tslib_fe to TypoScriptFrontendController
 - [#5426] Change t3lib_beUserAuth to BackendUserAuthentication
 - [#5439] Change t3lib_SCbase to \TYPO3\CMS\Backend\Module\BaseScriptClass
 - [#5459] Change t3lib_FlashMessageQueue to \TYPO3\CMS\Core\Messaging\FlashMessageQueue
